--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -15,18 +15,24 @@
     <div id="chat-box" class="chat-box">
         <div class="message left"> Ravi: Hi </div>
         <div class="message right"> Jai: Hi </div>
+        <div class="message center">
+            <%= `${name} joined the chat` %>
+        </div>
     </div>
 
     <div class="input-msg">
         <form action="#" id="form">
+            <input type="text" id="roomId" value="<%= roomId %>" hidden>
+
             <label for="msg"> Message: </label>
             <input type="text" id="msg" name="msg" title="message" placeholder="Enter message">
+
             <input type="submit" id="submit">
         </form>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
